
- Improved handling of system errors when reading config files.

- Secured handling of password options for protocol modules.

- Support standard shell quoting for options in the "remotes" file.

- Added protocol option to set a separate TLS client private key file.

- Fixed nullmailer-inject to report errors to stderr.

- Fixed gnutls cast to pointer from integer of different size warning.

- Fixed nullmailer-queue to handle the null (empty) sender address.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.13

- Fixed growing recipient list when using sendmail -bs to send multiple
  messages.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.12

- Added a quadratic backoff for resend times.

- Added support for multiple admin addresses in nullmailer-queue.

- SMTP sender now sends a QUIT on success too.

- Fixed sendmail -bs mode to properly strip leading periods.

- Fixed duplicated final header line when message has no body.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.11

- Simplify (and expand) handling of ignored sendmail options.

- Fixed command-line interpretation of short options with values.

- Added support for SSL/TLS client certificates.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.10

- Added support for SMTPS (SMTP over SSL/TLS) and STARTTLS.
